--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -8,3 +8,8 @@ $secondary-font: "Satoshi", sans-serif;
 $light: 300;
 $bold: 500;
 $extra-bold: 900;
+
+//Colors
+$primary-color: #fff;
+$secondary-color: #f0f0f0;
+$accent-color: #000;
