--- a/src/components/SignUpWarner/SignUpWarner.module.scss
+++ b/src/components/SignUpWarner/SignUpWarner.module.scss
@@ -1,5 +1,10 @@
 @use "../../app/variables" as *;
 
+.signUpWarner * {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 .signUpWarner {
 	background-color: $accent-color;
 	padding-block: 10px;
