--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,9 +8,61 @@
 .header {
 	font-family: $secondary-font;
 	display: flex;
-	justify-content: space-around;
-	padding-block: 20px;
-	.navbar {
+	justify-content: center;
+	align-items: center;
+	gap: 80px;
+	padding-block: 26px;
+	.navbar ul {
 		display: flex;
+		gap: 30px;
+		align-items: center;
+		li {
+			list-style: none;
+			transition: all 0.1s ease-in-out;
+			cursor: pointer;
+
+			&:hover {
+				color: $secondary-color;
+			}
+		}
+	}
+	.inputWrapper {
+		position: relative;
+		span {
+			position: absolute;
+			font-size: 22px;
+			left: 16px;
+			top: 12px;
+			cursor: pointer;
+			&:hover {
+				opacity: 0.6;
+			}
+		}
+		input {
+			font-family: $secondary-font;
+			font-size: 16px;
+			text-indent: 50px;
+			width: 580px;
+			height: 48px;
+			border-radius: 60px;
+			outline: transparent;
+			border: none;
+			background-color: $secondary-color;
+		}
+	}
+	.accountProccesesIcons {
+		display: flex;
+		gap: 20px;
+		span {
+			font-size: 26px;
+			cursor: pointer;
+			transition: all 0.1s ease-in-out;
+			&:first-child {
+				display: none;
+			}
+			&:hover {
+				color: $secondary-color;
+			}
+		}
 	}
 }
