--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,6 +4,8 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	text-decoration: none;
+	color: $accent-color;
 }
 .header {
 	font-family: $secondary-font;
@@ -16,6 +18,31 @@
 		display: flex;
 		gap: 30px;
 		align-items: center;
+		.shopWrapper {
+			position: relative;
+			display: flex;
+			justify-content: center;
+			.popUpMenu {
+				ul {
+					background-color: $primary-color;
+					position: absolute;
+					display: flex;
+					flex-direction: column;
+					align-items: flex-start;
+					gap: 10px;
+					top: 26px;
+					left: -20px;
+					width: 170px;
+					padding: 10px;
+					border-radius: 10px;
+					box-shadow: 0 0 10px 1px $secondary-color;
+					li *:hover {
+						color: $secondary-color;
+					}
+				}
+			}
+		}
+
 		li {
 			list-style: none;
 			transition: all 0.1s ease-in-out;
@@ -27,8 +54,11 @@
 				span {
 					margin-top: 6px;
 				}
+				&:hover {
+					color: $secondary-color;
+				}
 			}
-			&:hover {
+			*:hover {
 				color: $secondary-color;
 			}
 		}
