--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -14,10 +14,44 @@
 	align-items: center;
 	gap: 80px;
 	padding-block: 26px;
+	position: relative;
+	.hamburgerIcon {
+		position: absolute;
+		left: 20px;
+		font-size: 26px;
+		cursor: pointer;
+		display: none;
+		@media screen and (max-width: 850px) {
+			display: block;
+		}
+	}
+	.hamburgerNavbar {
+		width: 100%;
+		height: 50vh;
+		position: absolute;
+		left: 0;
+		top: -40px;
+		background-color: rgba(32, 30, 30, 0.718);
+		transition: all 0.4s ease-in-out;
+	}
+	@media screen and (max-width: 1440px) {
+		gap: 20px;
+	}
+	@media screen and (max-width: 850px) {
+		justify-content: space-around;
+		gap: unset;
+	}
 	.navbar ul {
 		display: flex;
 		gap: 30px;
 		align-items: center;
+		@media screen and (max-width: 1050px) {
+			gap: 14px;
+			font-size: 14px;
+		}
+		@media screen and (max-width: 850px) {
+			display: none;
+		}
 		.shopWrapper {
 			position: relative;
 			display: flex;
@@ -78,6 +112,13 @@
 			left: 16px;
 			top: 12px;
 			cursor: pointer;
+			@media screen and (max-width: 1050px) {
+				top: 8px;
+				font-size: 18px;
+			}
+			@media screen and (max-width: 850px) {
+				display: none;
+			}
 			&:hover {
 				opacity: 0.6;
 			}
@@ -93,6 +134,17 @@
 			border: none;
 			background-color: $secondary-color;
 			transition: all 0.2s;
+			@media screen and (max-width: 1440px) {
+				width: 350px;
+			}
+			@media screen and (max-width: 1050px) {
+				font-size: 14px;
+				width: 280px;
+				height: 36px;
+			}
+			@media screen and (max-width: 850px) {
+				display: none;
+			}
 			&:focus {
 				box-shadow: 0 0 10px 1px $secondary-color;
 			}
@@ -105,8 +157,14 @@
 			font-size: 26px;
 			cursor: pointer;
 			transition: all 0.2s ease-in-out;
+			@media screen and (max-width: 1050px) {
+				font-size: 20px;
+			}
 			&:first-child {
 				display: none;
+				@media screen and (max-width: 850px) {
+					display: block;
+				}
 			}
 			& {
 				transition: all 0.2s ease-in-out;
