--- a/src/components/SignUpWarner/SignUpWarner.module.scss
+++ b/src/components/SignUpWarner/SignUpWarner.module.scss
@@ -13,6 +13,7 @@
 	}
 	@media only screen and (max-width: 380px) {
 		padding-inline: 40px;
+		font-size: 12px;
 	}
 	.warningText {
 		color: $primary-color;
@@ -24,12 +25,15 @@
 		@media only screen and (max-width: 450px) {
 			gap: 0;
 			text-align: center;
+			flex-direction: column;
 		}
 		.signUpLink {
 			color: $primary-color;
 			font-weight: 400;
 			text-decoration: none;
 			border-bottom: 1px solid $primary-color;
+			width: fit-content;
+			margin-inline: auto;
 		}
 	}
 	.closeIcon {
