--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -178,7 +178,6 @@
 					display: block;
 				}
 			}
-		
 		}
 	}
 }
@@ -186,7 +185,7 @@
 	width: 100vw;
 	left: 0;
 	bottom: -20px;
-
+	margin-bottom: 20px;
 	justify-content: center;
 
 	input {
@@ -217,13 +216,14 @@
 .hamburgerNavbar {
 	width: 100%;
 	height: 100vh;
-	position: absolute;
+	position: fixed;
 	left: 0;
 	top: 0px;
 	background-color: $accent-color;
 	display: flex;
 	justify-content: center;
 	transition: all 0.4s ease-in-out;
+	z-index: 4;
 
 	.navbar {
 		height: 100%;
