--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -12,19 +12,63 @@
 	align-items: center;
 	gap: 50px;
 	background-color: $hero-bg;
+	@media only screen and (max-width: 1440px) {
+		gap: 20px;
+	}
+	@media only screen and (max-width: 800px) {
+		flex-direction: column;
+		padding-top: 20px;
+	}
+
 	.textContent {
 		max-width: 600px;
 		display: flex;
 		flex-direction: column;
 		gap: 20px;
+		@media only screen and (max-width: 1440px) {
+			max-width: 420px;
+		}
+		@media only screen and (max-width: 1050px) {
+			max-width: 350px;
+			gap: 10px;
+		}
+		@media only screen and (max-width: 800px) {
+			max-width: 500px;
+			gap: 20px;
+		}
+		@media only screen and (max-width: 600px) {
+			max-width: 400px;
+		
+			align-items: center;
+		}
+		@media only screen and (max-width: 450px) {
+			max-width: 280px;
+		}
 		h1 {
 			font-family: $primary-font;
 			font-size: 64px;
+			@media only screen and (max-width: 1440px) {
+				font-size: 46px;
+			}
+			@media only screen and (max-width: 1050px) {
+				font-size: 34px;
+			}
+			@media only screen and (max-width: 600px) {
+				font-size: 30px;
+				text-align: center;
+			}
 		}
 		p {
 			font-family: $secondary-font;
 			line-height: 22px;
 			color: $gray;
+			@media only screen and (max-width: 1050px) {
+				font-size: 14px;
+			}
+			@media only screen and (max-width: 600px) {
+				font-size: 12px;
+				text-align: justify;
+			}
 		}
 		button {
 			width: 210px;
@@ -36,6 +80,21 @@
 			font-family: $secondary-font;
 			font-size: 16px;
 			transition: all 0.1s ease-in-out;
+			@media only screen and (max-width: 1050px) {
+				width: 120px;
+				height: 30px;
+				font-size: 14px;
+			}
+			@media only screen and (max-width: 800px) {
+				width: 210px;
+				height: 52px;
+				font-size: 16px;
+			}
+			@media only screen and (max-width: 600px) {
+				width: 120px;
+				height: 30px;
+				font-size: 14px;
+			}
 			&:hover {
 				background-color: $primary-color;
 				color: $accent-color;
@@ -48,6 +107,16 @@
 			justify-content: space-between;
 			align-items: center;
 			padding-block: 50px;
+			@media only screen and (max-width: 1440px) {
+				padding-block: 20px;
+			}
+			@media only screen and (max-width: 1050px) {
+				padding-block: 10px;
+			}
+			@media only screen and (max-width: 450px) {
+				flex-direction: column;
+				gap: 20px;
+			}
 			span {
 				display: flex;
 				flex-direction: column;
@@ -57,7 +126,27 @@
 					color: $accent-color;
 					font-family: $secondary-font;
 					font-size: 40px;
-					font-weight: 500;
+					font-weight: 600;
+					@media only screen and (max-width: 1440px) {
+						font-size: 30px;
+					}
+					@media only screen and (max-width: 1050px) {
+						font-size: 20px;
+					}
+					@media only screen and (max-width: 800px) {
+						font-size: 24px;
+					}
+				}
+				.statsLabel {
+					@media only screen and (max-width: 1440px) {
+						font-size: 14px;
+					}
+					@media only screen and (max-width: 1050px) {
+						font-size: 12px;
+					}
+					@media only screen and (max-width: 800px) {
+						font-size: 14px;
+					}
 				}
 			}
 		}
@@ -66,6 +155,19 @@
 		position: relative;
 		width: 670px;
 		height: 670px;
+		@media only screen and (max-width: 1440px) {
+			width: 500px;
+			height: 500px;
+		}
+		@media only screen and (max-width: 1050px) {
+			width: 350px;
+			height: 350px;
+		}
+
+		@media only screen and (max-width: 600px) {
+			width: 300px;
+			height: 300px;
+		}
 		img {
 			object-fit: cover;
 		}
