--- a/src/components/TopSelling/TopSelling.module.scss
+++ b/src/components/TopSelling/TopSelling.module.scss
@@ -1,12 +1,12 @@
 @use "../../app/variables" as *;
 
-.newArrivals * {
+.topSelling * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
-.newArrivals {
+.topSelling {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -36,6 +36,7 @@
 		}
 		@media screen and (max-width: 400px) {
 			width: 96%;
+			
 		}
 	}
 	.viewAllBtn {
