--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -72,26 +72,38 @@
 	.priceContainer {
 		display: flex;
 		align-items: center;
-		gap: 10px;
+		gap: 6px;
 		font-size: 24px;
 		font-weight: 600;
+		@media screen and (max-width: 1440px) {
+			font-size: 20px;
+		}
 		@media screen and (max-width: 1050px) {
+			flex-wrap: wrap;
 			font-size: 18px;
 		}
 		@media screen and (max-width: 800px) {
 			font-size: 16px;
+		}
+		.price {
+			@media screen and (max-width: 1050px) {
+				width: 100%;
+			}
 		}
 
 		.oldPrice {
 			color: $gray;
 			text-decoration: line-through;
 			font-size: 20px;
-			@media screen and (max-width: 1050px) {
+			letter-spacing: -1px;
+			@media screen and (max-width: 1440px) {
 				font-size: 16px;
 			}
-			@media screen and (max-width: 800px) {
+			@media screen and (max-width: 1050px) {
 				font-size: 14px;
-				letter-spacing: -1px;
+			}
+			@media screen and (max-width: 800px) {
+				font-size: 12px;
 			}
 		}
 		.discountPercentage {
@@ -101,14 +113,17 @@
 			background-color: $red-transparent;
 			padding: 4px 10px;
 			border-radius: 20px;
+			letter-spacing: -1px;
+			@media screen and (max-width: 1440px) {
+				font-size: 14px;
+				padding: 4px;
+			}
 			@media screen and (max-width: 1050px) {
 				font-size: 12px;
-				padding: 4px;
 			}
 			@media screen and (max-width: 800px) {
 				font-size: 12px;
 				padding: 2px;
-				letter-spacing: -1px;
 			}
 		}
 	}
