--- a/src/components/CommentCard/CommentCard.module.scss
+++ b/src/components/CommentCard/CommentCard.module.scss
@@ -11,8 +11,8 @@
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
-	min-width: 400px;
-	height: 240px;
+/* 	min-width: 400px;*/
+	height: 240px; 
 	border: 2px solid $secondary-color;
 	border-radius: 20px;
 	padding: 30px;
