--- a/src/components/OurHappyCustomers/OurHappyCustomers.module.scss
+++ b/src/components/OurHappyCustomers/OurHappyCustomers.module.scss
@@ -8,9 +8,15 @@
 }
 
 .ourHappyCustomers {
+	max-width: 1340px;
+	margin-inline: auto;
+	@media only screen and (max-width: 1440px) {
+		max-width: 950px;
+	}
+	@media only screen and (max-width: 1050px) {
+		max-width: 660px;
+	}
 	.header {
-		max-width: 1240px;
-		margin-inline: auto;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
@@ -18,6 +24,9 @@
 		.sectionTitle {
 			font-family: $primary-font;
 			font-size: 48px;
+			@media only screen and (max-width: 1050px) {
+				font-size: 36px;
+			}
 		}
 		.navigateCommentButtonsContainer {
 			display: flex;
@@ -28,15 +37,13 @@
 			background-color: transparent;
 			cursor: pointer;
 			border: none;
-		}
-		.nextBtn {
-			transform: rotate(180deg);
+			transition: opacity 0.2s ease-in-out;
+			&:hover {
+				opacity: 0.6;
+			}
 		}
 	}
 	.commentsSection {
 		margin-block: 30px;
-		display: flex;
-		overflow: hidden;
-		gap: 20px;
 	}
 }
