--- a/src/components/CommentCard/CommentCard.module.scss
+++ b/src/components/CommentCard/CommentCard.module.scss
@@ -11,12 +11,14 @@
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
-/* 	min-width: 400px;*/
-	height: 240px; 
+	height: 240px;
 	border: 2px solid $secondary-color;
 	border-radius: 20px;
 	padding: 30px;
 	transition: background-color 0.2s ease-in-out;
+	@media only screen and (max-width: 1050px) {
+		height: 180px;
+	}
 	&:hover {
 		background-color: $secondary-color;
 	}
@@ -33,10 +35,16 @@
 			font-size: 20px;
 			font-weight: 500;
 			color: $accent-color;
+			@media only screen and (max-width: 450px) {
+				font-size: 18px;
+			}
 		}
 	}
 	.comment {
 		font-family: $secondary-font;
 		color: $gray;
+		@media only screen and (max-width: 450px) {
+			font-size: 14px;
+		}
 	}
 }
