--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,10 +1,25 @@
 @use "../../app/variables" as *;
 
+.footer * {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
 .footer {
-	margin-top: 100px;
+	margin-top: 200px;
+	height: 500px;
+	background-color: $secondary-color;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	.form {
+		position: absolute;
+		top: -100px;
+		padding-block: 30px;
 		background-color: $accent-color;
 		max-width: 1340px;
+		width: 100%;
 		display: flex;
 		align-items: center;
 		justify-content: center;
@@ -38,6 +53,10 @@
 					font-family: $secondary-font;
 					font-size: 16px;
 					text-indent: 40px;
+					transition: all 0.1s ease-in-out;
+					&:focus {
+						background-color: $secondary-color;
+					}
 				}
 			}
 			.submitBtn {
@@ -55,6 +74,44 @@
 					color: $primary-color;
 					cursor: pointer;
 					border: 1px solid $primary-color;
+				}
+			}
+		}
+	}
+	.footerNav {
+		display: flex;
+		gap: 100px;
+		.navEl {
+			flex: 1;
+			display: flex;
+			gap: 20px;
+			flex-direction: column;
+			.description {
+				font-family: $secondary-font;
+				font-size: 14px;
+				line-height: 30px;
+				color: $gray;
+			}
+			.widgetTitle {
+				font-family: $secondary-font;
+				letter-spacing: 4px;
+			}
+			.widget {
+				font-family: $secondary-font;
+				color: $gray;
+			}
+			.socialIcons {
+				display: flex;
+				gap: 10px;
+				.socialIconWrapper {
+					background-color: $primary-color;
+					border-radius: 50px;
+					padding: 4px;
+					transition: all 0.1s ease-in-out;
+					&:hover {
+						cursor: pointer;
+						background-color: $gray;
+					}
 				}
 			}
 		}
