--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -14,11 +14,20 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	@media only screen and (max-width: 1440px) {
+		height: 400px;
+	}
+	@media only screen and (max-width: 800px) {
+		height: unset;
+	}
+	@media only screen and (max-width: 500px) {
+		padding-inline: 10px;
+	}
 	.form {
 		position: absolute;
 		top: -100px;
-		padding-block: 30px;
 		background-color: $accent-color;
+		padding-block: 30px;
 		max-width: 1340px;
 		width: 100%;
 		display: flex;
@@ -26,11 +35,43 @@
 		justify-content: center;
 		margin-inline: auto;
 		border-radius: 28px;
+		@media only screen and (max-width: 1440px) {
+			padding-block: 20px;
+			max-width: 950px;
+		}
+		@media only screen and (max-width: 1050px) {
+			max-width: 660px;
+		}
+		@media only screen and (max-width: 800px) {
+			max-width: 460px;
+			flex-direction: column;
+			top: -140px;
+		}
+		@media only screen and (max-width: 600px) {
+			top: -180px;
+			max-width: 100%;
+			border-radius: 0;
+		}
+
 		h3 {
 			color: $primary-color;
 			font-family: $primary-font;
 			font-size: 48px;
 			max-width: 700px;
+			@media only screen and (max-width: 1440px) {
+				font-size: 36px;
+				max-width: 550px;
+			}
+			@media only screen and (max-width: 1050px) {
+				font-size: 24px;
+				max-width: 300px;
+			}
+			@media only screen and (max-width: 800px) {
+				font-size: 24px;
+				max-width: 400px;
+				text-align: center;
+				margin-bottom: 20px;
+			}
 		}
 		.submitArea {
 			display: flex;
@@ -55,6 +96,11 @@
 					font-size: 16px;
 					text-indent: 40px;
 					transition: all 0.1s ease-in-out;
+					@media only screen and (max-width: 1440px) {
+						width: 250px;
+						height: 40px;
+						font-size: 14px;
+					}
 					&:focus {
 						background-color: $secondary-color;
 					}
@@ -65,11 +111,17 @@
 				height: 50px;
 				border-radius: 50px;
 				border: none;
+				color: $accent-color;
 				outline: none;
 				background-color: $primary-color;
 				font-family: $secondary-font;
 				font-size: 16px;
 				transition: all 0.1s ease-in-out;
+				@media only screen and (max-width: 1440px) {
+					width: 250px;
+					height: 40px;
+					font-size: 14px;
+				}
 				&:hover {
 					background-color: $accent-color;
 					color: $primary-color;
@@ -84,12 +136,64 @@
 		max-width: 1340px;
 		width: 100%;
 		justify-content: space-between;
+		@media only screen and (max-width: 1440px) {
+			max-width: 950px;
+		}
+		@media only screen and (max-width: 1050px) {
+			max-width: 660px;
+		}
+		@media only screen and (max-width: 800px) {
+			max-width: 590px;
+			gap: 10px;
+			justify-content: center;
+			align-items: center;
+			flex-wrap: wrap;
+			margin-top: 100px;
+		}
+		@media only screen and (max-width: 600px) {
+			max-width: 580px;
+		}
 		.navEl {
 			display: flex;
 			gap: 20px;
 			flex-direction: column;
+			@media only screen and (max-width: 800px) {
+				flex-wrap: wrap;
+			}
+			@media only screen and (max-width: 330px) {
+				gap: 10px;
+			}
 			&:first-child {
 				width: 250px;
+				@media only screen and (max-width: 1050px) {
+					width: 200px;
+				}
+				@media only screen and (max-width: 800px) {
+					text-align: center;
+					width: 190px;
+					height: 190px;
+				}
+				@media only screen and (max-width: 600px) {
+					width: 350px;
+					height: 160px;
+					gap: 10px;
+					align-items: center;
+				}
+			}
+			@media only screen and (max-width: 800px) {
+				text-align: center;
+				width: 190px;
+				height: 190px;
+			}
+			@media only screen and (max-width: 600px) {
+				width: 224px;
+			}
+			@media only screen and (max-width: 480px) {
+				width: 150px;
+				height: 180px;
+			}
+			@media only screen and (max-width: 330px) {
+				width: 130px;
 			}
 			.description {
 				font-family: $secondary-font;
@@ -100,10 +204,17 @@
 			.widgetTitle {
 				font-family: $secondary-font;
 				letter-spacing: 4px;
+				@media only screen and (max-width: 1050px) {
+					letter-spacing: 0px;
+					font-size: 14px;
+				}
 			}
 			.widget {
 				font-family: $secondary-font;
 				color: $gray;
+				@media only screen and (max-width: 1050px) {
+					font-size: 14px;
+				}
 			}
 			.socialIcons {
 				display: flex;
@@ -113,6 +224,16 @@
 					border-radius: 50px;
 					padding: 4px;
 					transition: all 0.1s ease-in-out;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					position: relative;
+					width: 40px;
+					height: 40px;
+					@media only screen and (max-width: 800px) {
+						width: 30px;
+						height: 30px;
+					}
 					&:hover {
 						cursor: pointer;
 						background-color: $gray;
@@ -125,6 +246,15 @@
 		max-width: 1340px;
 		width: 100%;
 		margin-block: 40px 10px;
+		@media only screen and (max-width: 1440px) {
+			max-width: 950px;
+		}
+		@media only screen and (max-width: 1050px) {
+			max-width: 660px;
+		}
+		@media only screen and (max-width: 800px) {
+			max-width: 460px;
+		}
 	}
 	.copyrightSection {
 		max-width: 1340px;
@@ -132,6 +262,19 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		@media only screen and (max-width: 1440px) {
+			max-width: 950px;
+		}
+		@media only screen and (max-width: 1050px) {
+			max-width: 660px;
+		}
+		@media only screen and (max-width: 800px) {
+			max-width: 460px;
+			flex-direction: column;
+			justify-content: center;
+			gap: 10px;
+			margin-bottom: 50px;
+		}
 		p {
 			font-family: $secondary-font;
 			color: $gray;
