--- a/src/components/ProductDetail/ProductDetail.module.scss
+++ b/src/components/ProductDetail/ProductDetail.module.scss
@@ -1,4 +1,8 @@
 @use "../../app/variables" as *;
+.loadingSpinner {
+	display: flex;
+	justify-content: center;
+}
 .productDetail * {
 	box-sizing: border-box;
 	margin: 0;
