--- a/src/components/CommentCard/CommentCard.module.scss
+++ b/src/components/CommentCard/CommentCard.module.scss
@@ -21,6 +21,11 @@
 	}
 	&:hover {
 		background-color: $secondary-color;
+		cursor: grab;
+	}
+	&:active {
+		background-color: $secondary-color;
+		cursor: grabbing;
 	}
 	.stars {
 		display: flex;
