SignUpForm and CodeVerification components updated

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -16,5 +16,5 @@ $accent-color: #000;
 $hero-bg: #f2f0f1;
 $gray: #808080;
 $product-bg: #f0eeed;
-$red: #ee6b6e;
+$red: #f8262a;
 $red-transparent: #ff33331f;
