--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -14,7 +14,11 @@
 	align-items: center;
 	gap: 80px;
 	padding-block: 26px;
-	position: relative;
+	position: sticky;
+	top: 0;
+	z-index: 2;
+	background-color: $primary-color;
+	box-shadow: 0 1px 50px -20px $gray;
 
 	@media screen and (max-width: 700px) {
 		padding-left: 10px;
@@ -177,6 +181,23 @@
 				@media screen and (max-width: 850px) {
 					display: block;
 				}
+			}
+		}
+		.cartWrapper {
+			position: relative;
+			.cartQuantity {
+				border-radius: 20px;
+				top: -14px;
+				right: -14px;
+				width: 26px;
+				height: 26px;
+				background-color: $accent-color;
+				position: absolute;
+				color: $primary-color;
+				font-size: 16px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 			}
 		}
 	}
