--- a/src/components/ProductDetail/ProductDetail.module.scss
+++ b/src/components/ProductDetail/ProductDetail.module.scss
@@ -309,6 +309,11 @@
 						}
 					}
 				}
+				.sizeWarning {
+					color: $red;
+					font-size: 18px;
+					font-weight: 500;
+				}
 			}
 
 			.selectQuantityContainer {
